tests/fixtures/invalid/max_bytes_dict.py
# Cannot call max() with Bytes, Dict[str, int]
x = max(b"hello", {"a": 1})
